<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_status"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.vpnbeast.android.activity.StatusActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:id="@+id/grdLayoutStatus"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="55dip"
        android:layout_marginLeft="55dip"
        tools:ignore="UselessParent" >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_server_name"
            android:textStyle="bold"
            android:layout_column="0"
            android:layout_row="0"
            />

        <TextView
            android:id="@+id/txtServerNameStatus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:text="@string/text_not_connected"
            android:layout_column="1"
            android:layout_row="0"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_ip"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_column="0"
            android:layout_row="1"
            />

        <TextView
            android:id="@+id/txtIpStatus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:text="@string/text_not_connected"
            android:layout_marginTop="10dp"
            android:layout_column="1"
            android:layout_row="1"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_port"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_column="0"
            android:layout_row="2"
            />

        <TextView
            android:id="@+id/txtPortStatus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:text="@string/text_not_connected"
            android:layout_marginTop="10dp"
            android:layout_column="1"
            android:layout_row="2"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_proto"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_column="0"
            android:layout_row="3"
            />

        <TextView
            android:id="@+id/txtProtoStatus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:text="@string/text_not_connected"
            android:layout_marginTop="10dp"
            android:layout_column="1"
            android:layout_row="3"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_status"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_column="0"
            android:layout_row="4"
            />

        <TextView
            android:id="@+id/txtStatusStatus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:text="@string/text_not_connected"
            android:layout_marginTop="10dp"
            android:layout_column="1"
            android:layout_row="4"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_bytes_in"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_column="0"
            android:layout_row="5"
            />

        <TextView
            android:id="@+id/txtBytesInStatus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:text="@string/text_not_connected"
            android:layout_marginTop="10dp"
            android:layout_column="1"
            android:layout_row="5"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_bytes_out"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_column="0"
            android:layout_row="6"
            />

        <TextView
            android:id="@+id/txtBytesOutStatus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:text="@string/text_not_connected"
            android:layout_marginTop="10dp"
            android:layout_column="1"
            android:layout_row="6"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_duration"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_column="0"
            android:layout_row="7"
            />

        <TextView
            android:id="@+id/txtDurationStatus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:text="@string/text_not_connected"
            android:layout_marginTop="10dp"
            android:layout_column="1"
            android:layout_row="7"
            />

        <Button
            android:id="@+id/btnDisconnect"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="8"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_selector_grey"
            android:text="@string/state_connecting"
            android:textColor="@color/colorBackground" />

    </GridLayout>


</RelativeLayout>