<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.vpnbeast.android.activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/grdLayoutLogin"
        android:src="@drawable/logo_vpnbeast"
        android:contentDescription="@string/app_name" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:id="@+id/grdLayoutLogin"
        android:layout_marginRight="40dip"
        android:layout_marginLeft="40dip"
        android:layout_above="@id/grdLayoutSLogin"
        >

        <TextView
            android:id="@+id/txtUsernameLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/text_username"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="7dp"
            android:textStyle="bold" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/edtUsernameLogin"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="20dip"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor">
            <requestFocus />
        </EditText>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/txtPassLogin"
            android:text="@string/text_password"
            android:layout_column="0"
            android:layout_row="1"
            android:textSize="15sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginTop="7dp"
            />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/edtPassLogin"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="20dip"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2"
        android:id="@+id/grdLayoutSLogin"
        android:layout_marginRight="40dip"
        android:layout_marginLeft="40dip"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_remember_me"
            app:layout_columnSpan="2"
            android:textSize="13sp"
            android:id="@+id/chkRememberLogin"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="7dip"
            />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/btnClearLogin"
            app:layout_row="1"
            app:layout_column="0"
            app:layout_gravity="fill_horizontal"
            app:layout_columnWeight="0.5"
            android:text="@string/text_clear"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_selector_black"
            android:textColor="@color/colorAccent"
            android:layout_marginEnd="5dip"
            />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/btnSubmitLogin"
            app:layout_row="1"
            app:layout_column="1"
            app:layout_columnWeight="0.5"
            android:layout_marginTop="5dp"
            app:layout_gravity="fill_horizontal"
            android:text="@string/text_submit"
            android:textColor="@color/colorAccent"
            android:background="@drawable/button_selector_black"
            android:layout_marginStart="5dip"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/txtRegister"
            android:text="@string/text_register"
            app:layout_row="2"
            app:layout_column="0"
            android:layout_marginTop="15dip"
            app:layout_columnSpan="2"
            app:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/txtResetPassword"
            android:text="@string/text_reset_password"
            app:layout_row="3"
            app:layout_column="0"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="5dp"
            app:layout_columnSpan="2"
            app:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_row="4"
            app:layout_column="0"
            app:layout_columnSpan="2"
            android:layout_marginBottom="5dp"
            app:layout_gravity="center|bottom"
            android:visibility="invisible" />
    </androidx.gridlayout.widget.GridLayout>
</RelativeLayout>